# UniDataExtract

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  app.py  main.py  pyproject.toml  requirements-render.txt  requirements-ui.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: ARCHITECTURE_DECISIONS.md
evals/: run_eval.py
evals/gold/: bucknell_edu.json  salisbury_edu.json  udc_edu.json
samples/: bucknell_edu.html  bucknell_edu.json  bucknell_edu.quality.json  salisbury_edu.html  salisbury_edu.json  salisbury_edu.quality.json  udc_edu.html  udc_edu.json  udc_edu.quality.json
tests/: test_discover.py  test_extractors.py  test_normalize.py  test_present.py  test_quality.py  test_report.py
unidata/: cli.py  config.py  console.py  crawl.py  discover.py  extractors.py  fetch.py  normalize.py  pipeline.py  present.py  quality.py  report.py  schema.py
